# PrettyMines

./: COPYING  README.md  meson.build
data/: site.marie-joseph.git.prettymines.appdata.xml.in  site.marie-joseph.git.prettymines.desktop.in
src/: Application.vala  Application.vala~
src/widgets/: GameMenu.vala  GameWindow.vala  Header.vala  PlayField.vala
src/widgets/buttons/: MineButton.vala
